--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,8 @@ flavor: "r"
 title: "George Mason University Data Carpentry"
 
 
+carpentry-id: "2021-01-22-gmu-online"
+
 #------------------------------------------------------------
 # Generic settings (should not need to change).
 #------------------------------------------------------------
