--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ flavor: "r"
 title: "George Mason University Data Carpentry"
 
 
-carpentry-id: "2021-01-22-gmu-online"
+carpentry-id: "2021-01-08-GMU"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
